# sil-q

./: .gitignore  .mdformat.toml  CHANGES.md  CMakeLists.txt  LICENSE.md  README.md  Sil-Q-version.txt  justfile  mise.toml  pyproject.toml
.github/workflows/: linux.yml  mac.yml  release.yml  src.yml  windows.yml
Sil.xcodeproj/: .gitignore
docs/: .editorconfig  .gitignore  .mdformat.toml  Brewfile  README.md  justfile  mise.toml  pyproject.toml  zensical.toml
docs/developer/: code_base.md  data_files.md  developer_mode.md  game_design.md  rendering.md  world_model.md
docs/user/: changes.md  community.md  credits.md  download.md  index.md  manual.md  sources.md
lib/docs/: CHANGELOG.md  COMPILING.md  MACOS.md  copying.txt
lib/edit/: ability.txt  artefact.txt  flavor.txt  history.txt  house.txt  limits.txt  monster.txt  names.txt  object.txt  race.txt  special.txt  terrain.txt  vault.txt
lib/pref/: flvr-new.prf  flvr-tiles.prf  font-std.prf  font.prf  graf-gcu.prf  graf-mac.prf  graf-new.prf  graf-tiles.prf  graf-win.prf  graf-x11.prf  graf.prf  message.prf  pref-mac.prf  pref-win.prf  pref-x11.prf  pref.prf  races.prf  user.prf  xtra-new.prf
lib/xtra/: tutorial
lib/xtra/graf/: TilePicker.html  osx_bmp2png.py
src/: Makefile.cocoa  Makefile.cyg  Makefile.osx-console  Makefile.src  Makefile.std  birth.c  cave.c  cmd1.c  cmd2.c  cmd3.c  cmd4.c  config.h  defines.h  dump_items.c  dungeon.c  externs.h  files.c  generate.c  h-config.h  h-define.h  h-system.h  h-type.h  init.h  init1.c  init2.c  maid-x11.c  main-cocoa-NMcC.m  main-cocoa.m  main-crb.c  main-gcu.c  main-gtk.c  main-win.c  main-x11.c  main-xxx.c  main.c  main.h  melee1.c  melee2.c  monster2.c  object1.c  (+19 more)
src/cocoa/: AppDelegate.m  Info.plist.in
world-db/: .editorconfig  .pre-commit-config.yaml  Brewfile  CODE_ANALYSIS.md  PLAN.md  WORLD_MODEL.md  justfile
world-db/docs/: VERIFICATION.md
world-db/hacking/: GAME_DESIGN.md
worlddb/: PLAN.md  pyproject.toml
worlddb/developer/: CHEATING.md  CODEBASE.md  CODE_BASE.md  DATA_FILES.md  GAME_DESIGN.md  GAME_STATE.md  RENDERING.md  TILE_SYSTEM.md
worlddb/hacking/: CODE_ANALYSIS.md  DATA_FILES.md
